# baked-vector

./: LICENSE  README.md  baked-vector.cabal
src/Data/Vector/Storable/: Bake.hs
test/: Spec.hs
