name:                baked-vector
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chpatrick/baked-vector#readme
license:             MIT
license-file:        LICENSE
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
copyright:           2017 Patrick Chilton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Vector.Storable.Bake
  build-depends:       base >= 4.7 && < 5,
                       vector,
                       template-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite baked-vector-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       baked-vector,
                       vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
